# CSC2541-Compute-Optimal-TTS

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml
cot_pipeline/: cot_experiments.py  cot_experiments_ollama.py  cot_experiments_ollama_generic.py  fewshot_pipeline.py  llm_as_a_judge.py  requirements.txt
cot_pipeline/.devcontainer/: Dockerfile  devcontainer.json  devcontainer_dummy.env
s1-scaling/: requirements.txt  s1-scaling-large.py
scripts/: check_models_ready.py  vector_model-qwen2.5_prm-math-shep-large.sh  vector_model-qwen2.5_prm-math-shep.sh
src/: model_wrapper.py  plot.py
src/models/: utils.py
src/utils/: config.py  system.py
