[project]
name = "csc2541-compute-optimal-tts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.4.0",
    "accelerate>=0.34.2",
    "antlr4-python3-runtime==4.11.1",
    "datasets>=3.3.2",
    "deepspeed>=0.16.4",
    "dm-env>=1.6",
    "dm-tree>=0.1.8",
    "fastchat>=0.1.0",
    #"flash-attn>=2.7.4.post1",
    "fschat[model-worker,webui]>=0.2.36",
    "fuzzywuzzy>=0.18.0",
    "jsonlines>=4.0.0",
    "loguru>=0.7.3",
    "numpy>=1.26.4",
    "pebble>=5.1.0",
    "peft>=0.14.0",
    "protobuf>=6.30.0",
    "pydantic>=2.10.6",
    "pylatexenc>=2.10",
    "pyparsing>=3.2.1",
    "python-dateutil>=2.9.0.post0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "sentencepiece>=0.2.0",
    "setproctitle>=1.3.5",
    "setuptools>=75.8.2",
    "sympy==1.12",
    "tensorboard>=2.19.0",
    "tensorboardx>=2.6.2.2",
    "timeout-decorator>=0.5.0",
    "torchtyping>=0.1.5",
    "tqdm>=4.67.1",
    "transformers>=4.44.2",
    "typing-extensions>=4.12.2",
    "vllm==0.6.1.post2",
    "word2number>=1.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src", "openr"]

[project.optional-dependencies]
build = ["torch", "setuptools", "packaging"]
compile = ["flash-attn"]

[tool.uv]
no-build-isolation-package = ["flash-attn", "xformers", "vllm"]

[[tool.uv.dependency-metadata]]
name = "flash-attn"
version = "2.4.1.post1"
requires-dist = ["torch", "einops", "setuptools"]

